# stat

./: CMakeLists.txt  README.md  format_code.sh  install.sh
.github/workflows/: ci.yml
config/: oasis-stat.service  stat.conf
include/: ark_detection.h  battery_model.h  cpu_monitor.h  daly_bms.h  daly_bms_internal.h  fan_monitor.h  i2c_utils.h  ina238.h  ina238_registers.h  ina3221.h  logging.h  memory_monitor.h  mqtt_publisher.h  mqtt_publisher_internal.h  system_temp_monitor.h
src/: ark_detection.c  battery_model.c  cpu_monitor.c  daly_bms.c  fan_monitor.c  i2c_utils.c  ina238.c  ina3221.c  logging.c  memory_monitor.c  mqtt_publisher.c  oasis-stat.c  system_temp_monitor.c
tests/: test_battery_model.c  test_daly_health.c  test_daly_parsing.c  test_mqtt_json.c
tools/stat-monitor/: README.md  oasis-stat-monitor.desktop  setup.sh  stat_monitor.py
